<resources>
    <string name="app_name">The Market Manager</string>
    <string name="dashboard">Dashboard</string>
    <string name="store">Store</string>
    <string name="orders">Orders</string>
    <string name="add_product">Add Product</string>
    <string name="product_info">Product Info</string>
    <string name="price_colon">Price: %1s</string>
    <string name="available_quantity_colon">Available Quantity: %1s</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="available_quantity">Available quantity</string>
    <string name="save">Save</string>
    <string name="error_field_cannot_be_empty">Field cannot be empty!</string>
    <string name="error_price_cannot_be_zero">Price cannot be zero!</string>
    <string name="product_name_field_helper_text_add_product_dialog_fragment">Be careful when entering a product name. It cannot be updated later.</string>
    <string name="confirm_product_information">Confirm product information</string>
    <string name="add_product_confirm_dialog_message">Make sure that product info are correct. The product name cannot be updated later.</string>
    <string name="edit">Edit</string>
    <string name="save_anyway">Save anyway</string>
    <string name="you_cannot_modify_the_product_name">You cannot modify the product name, as this may affect orders containing this product.</string>
    <string name="cancel">Cancel</string>
    <string name="enter_s">Enter %1s</string>
    <string name="search">Search</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="id_colon">Id: %1s</string>
    <string name="date_colon">Date: %1s</string>
    <string name="total_colon">Total: %1s</string>
    <string name="add_order">Add Order</string>
    <string name="total">Total</string>
    <string name="tab_to_add_products">Tab + to add products</string>
    <string name="done">Done</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="ok">OK</string>
    <string name="available_colon">Available: %1s</string>
    <string name="select_product">Select product</string>
    <string name="sold_quantity">Sold quantity</string>
    <string name="enter_sold_quantity_for_selected_product">Enter sold quantity for selected product:</string>
    <string name="you_must_enter_valid_quantity">You must enter valid quantity!</string>
    <string name="the_product_is_not_available">The product isn\'t available.</string>
    <string name="confirm_order_information">Confirm order information</string>
    <string name="order_info_confirm_dialog_message">Before proceed, please check order products, prices and total.</string>
    <string name="order_sold_products_cannot_be_empty">Order sold products cannot be empty.</string>
    <string name="sure_to_delete">Sure To delete?</string>
    <string name="delete">Delete</string>
    <string name="order_info">Order Info</string>
    <string name="delete_order">Delete order</string>
    <string name="filter_products">Filter Products</string>
    <string name="all">All</string>
    <string name="unavailable_products">Unavailable products</string>
    <string name="there_are_no_products">There are no products</string>
    <string name="all_products_are_available">All products are available</string>
    <string name="no_results_found">No results found</string>
    <string name="there_are_no_orders">There are no orders</string>
    <string name="statistics">Statistics</string>
    <string name="revenue">Revenue</string>
    <string name="select_time">Select time</string>
    <string name="done_orders_count">Done orders count</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_2_months">Last 2 months</string>
    <string name="last_year">Last year</string>
    <string name="today_s_revenue">Today\'s revenue</string>
    <string name="orders_made_today">Orders made today</string>
    <string name="see_store">See Store</string>
    <string name="see_last_order">See Last Order</string>
    <string name="see_statistics">See Statistics</string>
</resources>