<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host"
    app:startDestination="@id/nav_dashboard">
    <fragment
        android:id="@id/nav_dashboard"
        android:name="com.sherifnasser.themarketmanager.ui.fragment.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard"/>
    <fragment
        android:id="@id/nav_store"
        android:name="com.sherifnasser.themarketmanager.ui.fragment.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store">
        <action
            android:id="@+id/action_nav_store_to_addProductDialogFragment"
            app:destination="@id/addProductDialogFragment"/>
        <action
            android:id="@+id/action_nav_store_to_productInfoFragment"
            app:destination="@id/productInfoFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"/>
    </fragment>
    <fragment
        android:id="@id/nav_orders"
        android:name="com.sherifnasser.themarketmanager.ui.fragment.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders"/>
    <dialog
        android:id="@+id/addProductDialogFragment"
        android:name="com.sherifnasser.themarketmanager.ui.fragment.store.AddProductDialogFragment"
        android:label="@string/add_product"
        tools:layout="@layout/fragment_dialog_add_product"/>
    <fragment
        android:id="@+id/productInfoFragment"
        android:name="com.sherifnasser.themarketmanager.ui.fragment.store.ProductInfoFragment"
        android:label="@string/product_info"
        tools:layout="@layout/fragment_product_info" >
        <action
            android:id="@+id/action_productInfoFragment_to_updateProductInfoBottomSheetDialogFragment"
            app:destination="@id/updateProductInfoBottomSheetDialogFragment"/>
    </fragment>
    <dialog
        android:id="@+id/updateProductInfoBottomSheetDialogFragment"
        android:name="com.sherifnasser.themarketmanager.ui.fragment.store.UpdateProductInfoBottomSheetDialogFragment"
        tools:layout="@layout/fragment_bottom_sheet_dialog_update_product_info">
        <argument
            android:name="titleResId"
            app:argType="integer"
            android:defaultValue="-1"/>
    </dialog>
</navigation>