<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.orders.ProductSoldQuantityDialogFragment"
    android:background="@drawable/dialog_fragment_rounded_corners_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sold_quantity"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="24sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_sold_quantity_for_selected_product"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selected_product_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selected_product_price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selected_product_available_quantity_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <EditText
            android:id="@+id/sold_qty_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:digits="0123456789"
            android:inputType="numberSigned"
            android:textCursorDrawable="@drawable/edit_text_text_cursor_drawable"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="end">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>