<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.dashboard.DashboardFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_order"
            app:icon="@drawable/ic_add_order"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            app:icon="@drawable/ic_add_product"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAllCaps="false"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/last_order_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeWidth="0.5dp"
            app:strokeColor="@android:color/darker_gray"
            android:foreground="?attr/selectableItemBackground">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_last_order"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/colorAccent"
                    android:layout_centerVertical="true"/>
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_forward"
                    app:tint="@color/colorAccent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/store_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeWidth="0.5dp"
            app:strokeColor="@android:color/darker_gray"
            android:foreground="?attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unavailable_products"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/unavailable_products_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_store"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        tools:ignore="RelativeOverlap" />
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_forward"
                        app:tint="@color/colorAccent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"/>
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/statistics_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeWidth="0.5dp"
            app:strokeColor="@android:color/darker_gray"
            android:foreground="?attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_revenue"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/today_revenue_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_made_today"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_marginTop="12dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/today_orders_done_count_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_statistics"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@color/colorAccent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        tools:ignore="RelativeOverlap" />
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_forward"
                        app:tint="@color/colorAccent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"/>
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>